force-app/src/objects/ffct__MetadataMigration__c.object
<CustomObject>
    <customHelpPage>ffct__migrationsetonlinehelp</customHelpPage>
    <description>The metadata that needs to be migrated to another organization</description>
    <fields>
        <fullName>ffct__APIName__c</fullName>
        <description>Holds the API name of the metadata to be migrated</description>
        <label>API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__ChangedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MetadataMigration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffct__MetadataType__c</fullName>
        <description>Holds the metadata type to be migrated</description>
        <label>Metadata Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__MigrationSet__c</fullName>
        <description>Holds the associated Migration Set</description>
        <label>Migration Set</label>
        <referenceTo>ffct__MigrationSet__c</referenceTo>
        <relationshipLabel>Metadata Migration</relationshipLabel>
        <relationshipName>MetadataMigration</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffct__NamespacePrefix__c</fullName>
        <description>Holds the namespace prefix of the metadata to be migrated</description>
        <label>Namespace Prefix</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__UniqueKey__c</fullName>
        <description>Holds the unique value of the metadata record</description>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Metadata Migration</label>
    <listViews>
        <fullName>ffct__All</fullName>
        <columns>NAME</columns>
        <columns>ffct__MetadataType__c</columns>
        <columns>ffct__NamespacePrefix__c</columns>
        <columns>ffct__APIName__c</columns>
        <columns>ffct__MigrationSet__c</columns>
        <columns>ffct__ChangedById__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metadata Migration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>